This file lists a summary of changes for released ngx-state-store versions.

v1.0.15
  - cyclic dependencies resolution by the StateHelper.cloneObject()
  - prevent clone window by the StateHelper.cloneObject()
  - check return value of the Action.handleState() by rxjs isObservable()

v1.0.14
  - documentation was externalized and now available at https://it-and-services.github.io/state-store/

v1.0.13
  - documentation update

v1.0.12
  - updated to angular 11
  - documentation improvement
  - extend performance plugin by the 'limit' parameter, default value is 1000

v1.0.11
  - second unused parameter (objectComparator?: ObjectComparator) removed from the method Store#selectOnce<keyString extends keyof S>(prop: keyString)
  - documentation improvement in the README.md regarding the ObjectComparator in the method Store#select<keyString extends keyof S>(prop: keyString, objectComparator?: ObjectComparator)
  - increase test coverage regarding the ObjectComparator in the method Store#select<keyString extends keyof S>(prop: keyString, objectComparator?: ObjectComparator)

v1.0.10
  - updated to angular 10
  - functions cloning is optional, default is 'true', StateHelper.cloneObject(any, cloneFunctions = true)
  - documentation improvement in the README.md

v1.0.9
  - documentation improvement in the README.md

v1.0.8
  - documentation improvement in the README.md

v1.0.7
  - API overview in the README.md

v1.0.6
  - hide second parameter in the StateHelper.cloneObject(any)

v1.0.5
  - improve documentation
  - increase test coverage

v1.0.4
  - add clone Date into the StateHelper.cloneObject()

v1.0.3
  - add keywords into the package.json

v1.0.2
  - improve documentation
  - plugins are always included

v1.0.1
  - improve documentation
  - increase test coverage
  - improve build process

v1.0.0
  - first release; supported applications with angular version >= 7.2.0

v0.0.1
  - first beta release