@@ -2,7 +2,8 @@ This file lists a summary of changes for released ngx-state-store versions.
 
 v1.0.15
   - cyclic dependencies resolution by the StateHelper.cloneObject()
-  - prevent clone window by the StateHelper.cloneObject()
+  - prevent to clone the window by the StateHelper.cloneObject()
+  - prevent to freeze the window by the StateHelper.deepFreeze()
   - check return value of the Action.handleState() by rxjs isObservable()
 
 v1.0.14
